--- a/style.css
+++ b/style.css
@@ -1,44 +1,63 @@
-
-.page{
-   background-color: #edededff;
-  margin: 0 auto;  
-}
-
-*{
+ *{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-.imagege{
-  background-image: url('images/coffeehouse.jpg');
-  width: 100%;
-  
+.page{
+  background-color: #d2d2d0ff;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  font-family: "Inconsolata", sans-serif;
 }
 
-html, body {
-  height: 100%;
+.barra{
+  border-left: 6px solid #ccc;
+  background-color: #e6e6e6;
+}
+
+
+.imagege{
+  background-image: url('images/coffeehouse.jpg');
+  background-position: center;
   width: 100%;
+  height: 500px;
+  margin: 0px;
+  padding: 0px 0px;
+  display: flex;
+ align-items: center; 
+  justify-content: space-between;
 }
 
 header{
-  background-color: #000000;  /* Blue */
-  padding: 0px 0;
+  background-color: #000000;  
+  padding: 0px 0px;
+  margin: 0px 0px;
   display: flex;
   justify-content: center;  
+  position: fixed;
+  width: 100%;
 }
 
 header a {
+  font-family: "Inconsolata", sans-serif;
   color: #ffff;
-  margin-left: 20px;
-  margin-right: 20px;
+  margin: 20px 0px;
+  padding: 16px 150px;
   text-decoration: none;
+  font-size: 15px;
+  line-height: 1.5;
+}
 
+header a:hover {
+  background-color: #a7aaa7;
+  color: black;
 }
 
 .menu-container {
   height: 50px;
-  width: 1200px;
+  width: 100%;
   display: flex;
   align-items: center; 
   justify-content: space-around;
@@ -59,6 +78,8 @@ ul {
 .conthome{
   margin-right: 90px;
   margin-left: 90px;
+  padding: 40px 0px;
+  width: 70%;
 }
 
 img {
@@ -67,20 +88,110 @@ img {
 object-fit: contain;
 }
 
-h1{ 
-  background-color: #0000;
+h1{
+  font-family: "Segoe UI",Arial,sans-serif;
+  color: #ffff;
+  background-color: #000;
   text-align: center;
- 
+  margin: 100px 0px;
+  font-size: 20px;
+  display: inline;
+}
+
+h4,
+h5,
+h6
+{ 
+  font-family: "Segoe UI",Arial,sans-serif;
+  font-size: 20px
+}
+
+.pmenu{
+  color: grey;
+}
+
+.the{
+  color: #ffffffff;
+  font-family: "Segoe UI",Arial,sans-serif;
+  font-size: 90px;
+  padding: 0px 0px;
+  margin: 0px 0px;
+
+  display: flex;
+  
+}
+
+.open{
+  background-color: #000;
+  display: flex;
+  font-size: 17px;
+  justify-content: flex-start;
+  color: white;
+  margin: 0 7px;
+  align-items: end;
+}
+
+.adr{
+  color: white;
+  
+}
+
+.from{
+  display: flex;
+
 }
 
 p{
-
-  text-align: justify;
   font-size: 18px;
+  line-height: 1.5;
+  text-align: justify;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  letter-spacing: 4px;
 }
 
-input {
-  overflow: hidden;
-  padding: 0 3px 0 0;
-  width: 100%
-        }
+input[type=text], input[type=number], input[type=datetime-local], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #acaaaa;
+  box-sizing: border-box;
+}
+
+button[type=submit] {
+  width: 20%;
+  background-color: #000000;
+  color: white;
+  padding: 16px 0px;  
+  margin: 8px 0;
+  border: 1px solid #bdc2bd;
+}
+
+button[type=submit]:hover {
+  background-color: #a7aaa7;
+  color: black;
+}
+
+
+.w3-tag {
+  background-color: #000;
+  color: #ffff;
+  font-size: 18px;
+  
+}
+
+
+footer{
+  height: 100px;
+  width: 100%;
+  background-color: #ccccccff;
+  align-items: center;
+}
+
+.foot{
+    display: flex; 
+  justify-content: center;
+  padding: 50px 0px; 
+  background-color: #ccccccff;
+}
